bin_PROGRAMS = klisp
klisp_SOURCES = \
	src/avlmap.c \
	src/binary.c \
	src/binary_stream.c
	src/custom_stream.c \
	src/eval.c \
	src/file_stream.c \
	src/gc.c \
	src/hashmap.cpp \
	src/http.c \
	src/init.c \
	src/klisp.c \
	src/native.c\
	src/package.cpp \
	src/print.c \
	src/read.c \
	src/regex.c \
	src/sockets.c \
	src/stream.c \
	src/symbol.c \
	src/term.c \
	src/thread.c \
	src/tqueue.c \
	src/treemap.cpp \
	src/vector.cpp
