bin_PROGRAMS = klisp
klisp_SOURCES = \
	lisp/avlmap.c \
	lisp/binary.c \
	lisp/binary_stream.c
	lisp/custom_stream.c \
	lisp/eval.c \
	lisp/file_stream.c \
	lisp/gc.c \
	lisp/hashmap.cpp \
	lisp/http.c \
	lisp/init.c \
	lisp/klisp.c \
	lisp/native.c\
	lisp/package.cpp \
	lisp/print.c \
	lisp/read.c \
	lisp/regex.c \
	lisp/sockets.c \
	lisp/stream.c \
	lisp/symbol.c \
	lisp/term.c \
	lisp/thread.c \
	lisp/tqueue.c \
	lisp/treemap.cpp \
	lisp/vector.cpp
